Improvement of SIGTERM handling